Web Inspector: REGRESSION(?): Elements: Computed: property traces that wrap have an incorrectly aligned list item indicator https://bugs.webkit.org/show_bug.cgi?id=243508
Reviewed by Patrick Angle.

* Source/WebInspectorUI/UserInterface/Views/ComputedStyleSection.css:
(.computed-style-section .computed-property-item .property-trace-item::before):

Canonical link: https://commits.webkit.org/253213@main

--- a/Source/WebInspectorUI/UserInterface/Views/ComputedStyleSection.css
+++ b/Source/WebInspectorUI/UserInterface/Views/ComputedStyleSection.css
@@ -96,7 +96,6 @@
 .computed-style-section .computed-property-item .property-trace-item::before {
     content: "\2022";
     display: inline-block;
-    position: absolute;
     margin-left: -0.8em;
 }
 
